tests/common/snapshots/test_diag_type__common__cond_branch_fail.snap
---
source: tests/common/mod.rs
expression: "String::from_utf8(msg_out).unwrap()"
---
[Error]: cannot match type!
5 |     | x >= 0 => true // condition branches must have same type
  |                 ^~~~
the expression here has type Bool, but expected Int.
