tests/common/snapshots/test_diag_type__common__cons_arg_fail1.snap
---
source: tests/common/mod.rs
expression: "String::from_utf8(msg_out).unwrap()"
---
[Error]: type vectors have different length!
7 |     MkPair(x) // wrong number of constructor arguments
  |     ^~~~~~~~~
failed to unify two vectors with lengths: [Lit(TyInt), Lit(TyBool)] and [Lit(TyInt)]
