tests/common/snapshots/test_diag_type__common__cons_arg_fail2.snap
---
source: tests/common/mod.rs
expression: "String::from_utf8(msg_out).unwrap()"
---
[Error]: cannot match type!
7 |     MkPair(x, x) // constructor argument type mismatch
  |     ^~~~~~~~~~~~
the expression here has type Bool, but expected Int.
