tests/common/snapshots/test_diag_type__common__func_arg_fail1.snap
---
source: tests/common/mod.rs
expression: "String::from_utf8(msg_out).unwrap()"
---
[Error]: type vectors have different length!
8 |     add(a) // wrong number of arguments
  |     ^~~~~~
failed to unify two vectors with lengths: [Lit(TyInt), Lit(TyInt)] and [Lit(TyInt)]
