tests/common/snapshots/test_diag_type__common__func_arg_fail2.snap
---
source: tests/common/mod.rs
expression: "String::from_utf8(msg_out).unwrap()"
---
[Error]: cannot match type!
8 |     add(a, true) // function argument type mismatch
  |            ^~~~
the expression here has type Int, but expected Bool.
