tests/common/snapshots/test_diag_type__common__guard_type_fail.snap
---
source: tests/common/mod.rs
expression: "String::from_utf8(msg_out).unwrap()"
---
[Error]: cannot match type!
3 |     guard x = true; // cannot match Int with Bool
  |               ^~~~
the expression here has type Int, but expected Bool.
