tests/common/snapshots/test_diag_type__common__if_cond_fail.snap
---
source: tests/common/mod.rs
expression: "String::from_utf8(msg_out).unwrap()"
---
[Error]: cannot match type!
3 |     if x + y then // if condition must be Bool
  |        ^~~~~
the expression here has type Int, but expected Bool.
