tests/common/snapshots/test_diag_type__common__let_patn_fail.snap
---
source: tests/common/mod.rs
expression: "String::from_utf8(msg_out).unwrap()"
---
[Error]: cannot match type!
3 |     let (a, b) = x + y; // cannot match pattern with Int
  |                  ^~~~~
the expression here has type (Int, Int), but expected Int.
