tests/common/snapshots/test_diag_type__common__match_branch_fail.snap
---
source: tests/common/mod.rs
expression: "String::from_utf8(msg_out).unwrap()"
---
[Error]: cannot match type!
11 |         | Some(_) => true // match branches must have same type
   |                      ^~~~
the expression here has type Int, but expected Bool.
