tests/common/snapshots/test_diag_type__common__poly_cons_fail.snap
---
source: tests/common/mod.rs
expression: "String::from_utf8(msg_out).unwrap()"
---
[Error]: cannot match type!
7 |     MkBox(x + 42) // this should fail at type checking
  |           ^
the expression here has type Int, but expected a.

[Error]: cannot match type!
7 |     MkBox(x + 42) // this should fail at type checking
  |     ^~~~~~~~~~~~~
the expression here has type a, but expected Int.
